associate screen added and other call to the api done

--- a/templates/originalImage.html
+++ b/templates/originalImage.html
@@ -1,1 +1,1 @@
-<html><head><style> html {background:url('/Users/cobos/Documents/TFG/Software/playlist/f85fabfa18fb5270e2e0e2422bbae586.png') center center no-repeat;} </style></head><body></body><script>setTimeout(closeBrowser, 50000 );function closeBrowser(e) {window.close(); } </script></html>
+<html><head><style> html {background:url('/Users/cobos/Documents/TFG/Software/playlist/26894dc078d433352aab1333cef53559.jpg') center center no-repeat;} </style></head><body></body><script>setTimeout(closeBrowser, 10000 );function closeBrowser(e) {window.close(); } </script></html>
